tests/invalid/for_enumerate_unpack_wrong_arg_count/main.py
def run_case() -> None:
    for i, v in enumerate([1, 2], 1):
        print(i + v)

if __name__ == "__main__":
    run_case()
